2022-05-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/doc.am (dist-info-bits, install_infodoc, dist-gnueps): Fix
	logic error.  When checking both source and build trees for
	files to copy, break after successfully copying the files, not
	after the first iteration of the loop unconditionally.  This
	caused the Info documents not to be installed from out-of-tree
	builds, and potentially would prevent them and doc/gnu.eps from
	being included in the distribution archive if for some reason
	they didn't build and that build failure were not treated as an
	error.  Problems introduced by me in commits e78bd20d54, 27
	March, and d79c3f3a4a, 11 November.

2022-05-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_APPRESDIR_OPTION): Update comments and
	human-readable output to (1) stop claiming that existing
	gxditview application defaults in the installation directory
	will be backed up; this is no longer true as of commit
	c66cb7725f, 3 April; and (2) refer to these files as
	"application defaults", not "resources".  (X11 application
	defaults are client-side and mandatory [for Xt-based programs];
	X resources are stored server-side and need not be configured to
	determine an X client's geometry and rendering.)

2022-05-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devX100-12/devX100-12.am (devX100_12_fontdir):
	* font/devX100/devX100.am (devX100_fontdir):
	* font/devX75-12/devX75-12.am (devX75_12_fontdir):
	* font/devX75/devX75.am (devX75_fontdir): Define macros without
	an extra "font/" layer in the directory hierarchy.

	Fixes problem introduced by me in commit 3c82cbbfe5, 27
	February.

2022-05-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/devpdf.am (font/devpdf/util/BuildFoundries): Spell
	dependency on `$(SH_DEPS_SED_SCRIPT)` using that macro expansion
	instead of a literal file name.  See doc/automake.mom.

2022-05-02  G. Branden Robinson <g.branden.robinson@gmail.com>
